// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`editorconfig > .oxfmtrc overrides .editorconfig 1`] = `
"--- FILE -----------
test.js
--- BEFORE ---------
if (true) { console.log("hello"); }

--- AFTER ----------
if (true) {
  console.log("hello");
}

--------------------"
`;

exports[`editorconfig > basic settings from .editorconfig 1`] = `
"--- FILE -----------
test.js
--- BEFORE ---------
if (condition) { console.log("hello world"); }

--- AFTER ----------
if (condition) {
	console.log("hello world");
}

--------------------"
`;

exports[`editorconfig > empty .editorconfig 1`] = `
"--- FILE -----------
test.js
--- BEFORE ---------
if (true) { console.log("hello"); }

--- AFTER ----------
if (true) {
  console.log("hello");
}

--------------------"
`;

exports[`editorconfig > nested cwd - patterns resolved relative to .editorconfig location 1`] = `
"--------------------
arguments: --check .
working directory: editorconfig/fixtures/nested_cwd/sub
exit code: 0
--- STDOUT ---------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 1 files using 1 threads.
--- STDERR ---------

--------------------"
`;

exports[`editorconfig > no root [*] section 1`] = `
"--- FILE -----------
test.js
--- BEFORE ---------
if (true) { console.log("js"); }

--- AFTER ----------
if (true) {
	console.log("js");
}

--------------------

--- FILE -----------
test.ts
--- BEFORE ---------
if (true) { console.log("ts"); }

--- AFTER ----------
if (true) {
  console.log("ts");
}

--------------------"
`;

exports[`editorconfig > partial override - settings from both files merged 1`] = `
"--- FILE -----------
test.js
--- BEFORE ---------
if (true) { console.log("hello"); }

--- AFTER ----------
if (true) {
	console.log("hello");
}

--------------------"
`;

exports[`editorconfig > per-file overrides 1`] = `
"--- FILE -----------
test.js
--- BEFORE ---------
if (true) { console.log("js"); }

--- AFTER ----------
if (true) {
  console.log("js");
}

--------------------

--- FILE -----------
test.ts
--- BEFORE ---------
if (true) { console.log("ts"); }

--- AFTER ----------
if (true) {
    console.log("ts");
}

--------------------

--- FILE -----------
nested/deep/test.js
--- BEFORE ---------
if (true) { console.log("nested js"); }

--- AFTER ----------
if (true) {
        console.log("nested js");
}

--------------------

--- FILE -----------
nested/deep/test.json
--- BEFORE ---------
{"a":1,"b":2,"c":3,"d":4,"e":5,"f":6,"g":7,"h":8}

--- AFTER ----------
{
	"a": 1,
	"b": 2,
	"c": 3,
	"d": 4,
	"e": 5,
	"f": 6,
	"g": 7,
	"h": 8
}

--------------------"
`;
